# tui

./: .gitignore  .gitmodules  LICENSE  Package.swift  README.md
examples/: builtinFunctions.tui  daveTest.mjh  daveTest.tui  ethan.tui  example.mjh  example.tui  functionExpressions.tui  functionsAndIfStatements.mjh  helloWorld.tui  json.json  mathsAndExpressions.mjh  scope.mjh  scope.tui  simpleScript.mjh  test.lua  testing.tui
interpreter/: Interpreter.cpp  Interpreter.h
interpreter/cmake/: CMakeLists.txt  build.sh
interpreter/linux/: CMakeLists.txt  build.sh  main.cpp
interpreter/macos/c++/tui/tui/: main.cpp
interpreter/macos/c++/tui/tui.xcodeproj/: project.pbxproj
interpreter/macos/mjs/mjs/: main.cpp
interpreter/macos/mjs/mjs.xcodeproj/: project.pbxproj
interpreter/macos/swift/TuiEditor/: CxxFunctions.cpp  CxxFunctions.h  EditorView.swift  EditorViewModel.swift  SwiftClosure.h  TuiEditor-Bridging-Header.h  TuiEditorApp.swift
interpreter/macos/swift/TuiEditor.xcodeproj/: project.pbxproj
interpreter/macos/swift/TuiEditor/TuiFiles/: beep.tui  example.tui  syntaxHighlighting.tui
interpreter/macos/swift/TuiExample/: ContentView.swift  TuiExampleApp.swift  example.tui
interpreter/macos/swift/TuiExample.xcodeproj/: project.pbxproj
interpreter/macos/tui/tui/: main.cpp
interpreter/macos/tui/tui.xcodeproj/: project.pbxproj
interpreter/windows/tui/: tui.cpp  tui.sln  tui.vcxproj  tui.vcxproj.filters
scripts/: setup_glm_for_macos_sdk.sh
source/: FileUtils.cpp  FileUtils.h  MJExpression.cpp  MJExpression.h  MJFileUtils.cpp  MJFileUtils.h  MJFunction.cpp  MJFunction.h  MJLog.h  MJNumber.h  MJRef.cpp  MJRef.h  MJScript.h  MJSha1.cpp  MJString.h  MJStringUtils.cpp  MJStringUtils.h  MJTable.h  StringUtils.cpp  StringUtils.h  TuiBuiltInFunctions.cpp  TuiBuiltInFunctions.h  TuiFileUtils.cpp  TuiFileUtils.h  TuiFunction.cpp  TuiFunction.h  TuiLog.h  TuiNumber.h  TuiRef.cpp  TuiRef.h  TuiScript.h  TuiSha1.cpp  TuiSha1.h  TuiStatement.h  TuiString.h  TuiStringUtils.cpp  TuiStringUtils.h  TuiTable.cpp  TuiTable.h  module.modulemap  (+2 more)
tests/: builtinFunctions.tui  internalTesting.tui  json.json  tempTestFile.tui  testCommon.tui  tests.tui
(+5 files in other folders)
